# -halmstad_ws

./: .gitignore  AGENT.md  AGENTS.md  CURRENT_STATE.md  README.md  RUNNING_SIM.md  THESIS_HANDOFF.md  TODO.txt  VISUAL_FOLLOW_MATH.md  VISUAL_FOLLOW_PLAN.md  WILLIAM_UPDATED_MERGE_NOTES.md  run.sh  run_1to1_yolo.sh  run_dataset_make_obb.sh  run_follow_preflight.sh  run_follow_with_bag.sh  run_gazebo_sim.sh  run_round_motion.sh  run_rqt_image_view.sh  run_spawn_uav.sh  run_spawn_uavs.sh  run_tmux_1to1.sh  run_uav_camera_stack.sh  run_yolo.sh  stop_tmux_1to1.sh  support_chain_run_note.md
Markdowns/Implementation_Documentation/: IMPLEMENTATION_LOG.md
William/: multi_uav_phase_freeze_20260416.md
descriptions/: PIPELINE_DESCRIPTION.md
docs/: ROS2_Gazebo_Nav2_SLAM_QoS_Quick_Guide_v4.md  Stage2_Scenario_Control_Spec_from_4_papers_v2_repo_mapping.md  Yolo_model_comparison_v5n_vs_v5s.md  practical_requirements_todo_uav.md  runtime_recovery_checkpoint_2026-02-24.md  stage3_yolo_follow_perception_context_2026-02-24.md
maps/: waypoints_baylands_groups.csv
perspectives/: MANUAL.perspective  YOLO.perspective
scripts/: recover_sim_controllers.sh  run_1to1_follow.sh  run_1to1_yolo.sh  run_bag_monitor.sh  run_gazebo_sim.sh  run_record_experiment.sh  run_reset_experiment.sh  run_round.sh  run_spawn_uav.sh  run_support_follow_odom.sh  run_support_observation.sh  run_sync_waypoints_csv.sh  run_tmux_1to1.sh  run_tmux_support_chain.sh  stop_tmux_1to1.sh
src/lrs_halmstad/: README.md  package.xml  setup.py
src/lrs_halmstad/clearpath/: husky.rviz  robot.yaml  robot_vlp16.yaml  setup.bash
src/lrs_halmstad/config/: gui.config  run_follow_defaults.yaml  run_round_follow_defaults.yaml  run_round_follow_observe_strict.yaml
src/lrs_halmstad/launch/: managed_clearpath_sim.launch.py  run_1to1_follow.launch.py  run_follow.launch.py  run_follow_motion.launch.py  (+13 more)
src/lrs_halmstad_gui_plugins/: CMakeLists.txt  package.xml
src/lrs_halmstad_gui_plugins/include/lrs_halmstad_gui_plugins/: UavSpawner.hh
src/lrs_halmstad_gui_plugins/qml/: UavSpawner.qml  UavSpawner.qrc
src/lrs_halmstad_gui_plugins/src/: UavSpawner.cc
(+87 files in other folders)
