<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lrs_halmstad_gui_plugins</name>
  <version>0.0.0</version>
  <description>Gazebo GUI plugins for the lrs_halmstad workspace.</description>

  <maintainer email="tommy.persson@liu.se">tompe</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>gz_gui_vendor</depend>
  <depend>gz_msgs_vendor</depend>
  <depend>gz_plugin_vendor</depend>
  <depend>gz_transport_vendor</depend>
  <depend>lrs_halmstad</depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
